[package]
name = "websocket_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["macros", "headers", "ws"] }
tokio = { version = "1.29.1", features = ["full"] }
stupid_utils = "0.2.4"
log = "0.4.20"
futures = "0.3.28"
env_logger = "0.10.0"
